--- a/action.yml
+++ b/action.yml
@@ -27,7 +27,7 @@ runs:
       run: echo "$GITHUB_ACTION_PATH" >> $GITHUB_PATH
       shell: bash
       env:
-        GITHUB_ACTION_PATH; ${{ github.action_path }}
+        GITHUB_ACTION_PATH: ${{ github.action_path }}
 
     - name: Run goodbye.sh
       run: goodbye.sh
