Another attempt to move config file

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Load some configuration from YAML
         uses: doughepi/yaml-env-action
         with:
-          files: ./.github/config.yml # Pass a space-separated list of configuration files. Rightmost files take precedence.
+          files: ./.github/config/config.yml # Pass a space-separated list of configuration files. Rightmost files take precedence.
       - name: Test of config variables:
         run: |
           echo "Simple key: ${{ env.YEPE }}"
