--- a/my-local-action/action.yml
+++ b/my-local-action/action.yml
@@ -1,6 +1,9 @@
 name: 'My Local Action'
 description: 'Custom steps to perform from a local action in the same repo as the workflow'
 inputs:
+  condition:
+    description: 'A condition that makes a step execute or not'
+    default: false
   git-tag-release:
     description: 'The git tag that was assigned to the release'
     required: true
@@ -21,6 +24,16 @@ runs:
 
     - name: Show current branch
       run: git rev-parse --short HEAD
+      shell: bash
+
+    - name: Conditional step
+      if: inputs.condition == true
+      run: echo "THIS STEP WAS INDEED EXECUTED"
+      shell: bash
+
+    - name: Another conditional step
+      if: inputs.condition != true
+      run: echo "THE PREVIOUS STEP WAS SKIPPED - and we executed this one instead"
       shell: bash
 
     - name: Copy file into output folder
