Print all github context variables to look for the URL of the tag that triggered the workflow

--- a/my-local-action/action.yml
+++ b/my-local-action/action.yml
@@ -54,3 +54,8 @@ runs:
       env:
         GIT_TAG_RELEASE: ${{ inputs.git-tag-release }}
 
+    - name: Dump Github Context
+      env: 
+        GITHUB_CONTEXT: ${{ toJson(github) }}
+      run: echo "$GITHUB_CONTEXT"
+
